# ocaml-mlir

./: .ocamlformat  LICENSE  Makefile  README.md  c_flags  c_flags.sexp  c_library_flags  c_library_flags.sexp  dune-project  mlir.opam
.github/workflows/: master.yml
examples/rgn/: Makefile  dune  main.ml
examples/rgn/dialect/CAPI/: Dialects.cpp
examples/rgn/dialect/include/: Dialects.h
examples/rgn/dialect/include/rgn/: Dialect.h  Ops.td
examples/rgn/dialect/mlir/: Dialect.cpp
examples/simple/: dune
examples/toy/: Makefile  dune  inliner.ml  lower_to_affine.ml  main.ml  mlir_gen.ml  shape_inference.ml
examples/toy/Ch1/: dune  main.ml
examples/toy/Ch1/dialect/mlir/: Dialect.cpp
examples/toy/Ch1/parser/: ast.ml  dune
examples/toy/Ch2/: Makefile  dune  main.ml  mlir_gen.ml
examples/toy/Ch2/dialect/CAPI/: Dialects.cpp
examples/toy/Ch2/parser/: dune
examples/toy/Ch3/: dune  main.ml  mlir_gen.ml
examples/toy/Ch3/dialect/include/toy/: Ops.td
examples/toy/Ch3/parser/: dune
examples/toy/Ch4/: Makefile  dune  inliner.ml  main.ml  mlir_gen.ml  shape_inference.ml
examples/toy/Ch4/parser/: dune
examples/toy/Ch5/: dune  lower_to_affine.ml  main.ml  mlir_gen.ml  shape_inference.ml
examples/toy/Ch5/dialect/include/toy/: Ops.td
examples/toy/Ch5/parser/: dune
examples/toy/Ch6/: dune  lower_to_affine.ml  main.ml  mlir_gen.ml
examples/toy/Ch6/dialect/mlir/: Dialect.cpp
examples/toy/Ch6/parser/: dune
examples/toy/dialect/mlir/: Dialect.cpp  LowerPrintToLLVM.cpp  ToyCombine.cpp  ToyCombine.td
examples/toy/parser/: ast.ml  dune  parser.ml
src/config/: discover.ml
src/mlir/: dune  mlir.ml  mlir.mli
src/stubs/: affine_expr.ml  affine_map.ml  builtin_attributes.ml  builtin_types.ml  conversion.ml  diagnostics.ml  dune  execution_engine.ml  interfaces.ml  ir.ml  llvm.ml  pass.ml  register_everything.ml  stubs.ml  support.ml  transforms.ml  utils.ml
src/stubs/types/: types.ml
tests/: dune  pass.ml
tests/examples/toy/: args.t  dune
tests/examples/toy/inliner/test_1/: code.toy  run.t
tests/examples/toy/inliner/test_2/: code.toy  run.t
tests/examples/toy/inliner/test_mismatch_num_args_1/: code.toy  run.t
tests/examples/toy/inliner/test_mismatch_num_args_2/: code.toy  run.t
tests/examples/toy/inliner/test_unknown_func/: code.toy  run.t
tests/examples/toy/inliner/test_without_main/: code.toy  run.t
tests/examples/toy/jit/test_1/: code.toy  run.t
tests/examples/toy/jit/test_2/: code.toy  run.t
tests/examples/toy/jit/test_3/: dune  run.t
tests/examples/toy/lower_to_affine/test_1/: code.toy  run.t
tests/examples/toy/lower_to_affine/test_1_opt/: run.t
tests/examples/toy/lower_to_affine/test_2/: run.t
tests/examples/toy/lower_to_affine/test_2_opt/: run.t
tests/examples/toy/lower_to_affine/test_3/: run.t
tests/examples/toy/lower_to_affine/test_3_opt/: code.toy  run.t
tests/examples/toy/lower_to_affine/test_4/: run.t
tests/examples/toy/lower_to_affine/test_4_opt/: code.toy  run.t
tests/examples/toy/lower_to_mlir_llvm/test_1/: code.toy  run.t
tests/examples/toy/lower_to_mlir_llvm/test_2/: code.toy  run.t
tests/examples/toy/lower_to_mlir_llvm/test_3/: code.toy  run.t
tests/examples/toy/lower_to_mlir_llvm/test_4/: run.t
tests/examples/toy/mlir_gen/test_add_return/: code.toy  run.t
tests/examples/toy/mlir_gen/test_codegen/: run.t
tests/examples/toy/mlir_gen/test_invalid_modul/: code.toy  run.t
tests/examples/toy/mlir_gen/test_redefenition_var/: code.toy  run.t
tests/examples/toy/mlir_gen/test_scalar/: run.t
tests/examples/toy/mlir_gen/test_transpose/: code.toy  run.t
tests/examples/toy/opt/test_redundant_reshape/: code.toy  run.t
tests/examples/toy/opt/test_redundant_transpose_1/: run.t
tests/examples/toy/opt/test_redundant_transpose_2/: code.toy  run.t
tests/examples/toy/opt/test_reshape/: code.toy  run.t
tests/examples/toy/opt/test_transpose_1/: code.toy  run.t
tests/examples/toy/opt/test_transpose_2/: code.toy  run.t
tests/examples/toy/parser/test1/: code.toy  run.t
tests/examples/toy/parser/test_bin_op/: code.toy  run.t
tests/examples/toy/parser/test_comments/: code.toy  run.t
tests/examples/toy/parser/test_fail/: code.toy  run.t
tests/examples/toy/shape_inference/test_1/: run.t
tests/examples/toy/shape_inference/test_2/: code.toy  run.t
tests/examples/toy/shape_inference/test_add/: code.toy  run.t
tests/examples/toy/shape_inference/test_mul/: code.toy  run.t
tests/examples/toy/shape_inference/test_transpose/: code.toy  run.t
tests/mlir/: dune  ir.ml  pass.ml
(+1 files in other folders)
