(env
 (dev
  (flags
   (:standard -warn-error -32-11))))

(library
 (name mlir)
 (public_name mlir)
 (libraries mlir.stubs ctypes.stubs ctypes ctypes.foreign)
 (foreign_stubs
  (language c)
  (names mlir_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (instrumentation
  (backend bisect_ppx)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover ../config/discover.exe))
 (action
  (run %{discover})))

(rule
 (targets mlir_stubs.c mlir_generated.ml)
 (deps
  (:gen ../gen/gen_stubs.exe))
 (action
  (run %{gen})))
