(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name stubs)
 (public_name mlir.stubs)
 (libraries mlir.stubs.types ctypes.stubs ctypes ctypes.foreign))

(rule
 (targets types_bindings_generated.ml)
 (deps ../gen/gen_types_c.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} -ml))))
