(executable
 (public_name toy-ch1)
 (name main)
 (libraries mlir mlir.toy.parser1)
 (modules main)
 (flags
  (:standard -cclib %{read:toy_flags})))

(rule
 (targets toy_flags)
 (deps libToyCAPI.so libMLIRToy.so)
 (action
  (bash
   "echo \"-Wl,-rpath,`llvm-config-16 --libdir` -Wl,-rpath,`pwd` -L`pwd` -lMLIRToy -lToyCAPI \" > toy_flags")))

(rule
 (deps
  (source_tree dialect)
  Makefile)
 (targets libToyCAPI.so libMLIRToy.so)
 (action
  (no-infer
   (progn
    (run make capi_toy)
    (copy build/libToyCAPI.so libToyCAPI.so)
    (copy build/libMLIRToy.so libMLIRToy.so)))))
